--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -17,11 +17,10 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
           env:
-          LOCALE: "ko"
           SHOW_LINES_OF_CODE: "True"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_DAYS_OF_WEEK: "True"
-          SHOW_SHORT_INFO: "True"
+          SHOW_SHORT_INFO: "False"
           SHOW_LOC_CHART: "False"
           SHOW_PROJECTS: "False"
           SHOW_LANGUAGE_PER_REPO: "True"
