--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -17,7 +17,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
           env:
-          SHOW_LINES_OF_CODE: "True"
+          SHOW_LINES_OF_CODE: "False"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_DAYS_OF_WEEK: "True"
           SHOW_SHORT_INFO: "False"
